--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,48 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<web-app version="4.0" id="WebApp_ID"
-	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee; http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
-	xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-
-
-	-
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		 xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
+		 version="4.0">
 	<context-param>
-
 		<param-name>host</param-name>
-
 		<param-value>smtp.gmail.com</param-value>
-
 	</context-param>
 
-
-	-
 	<context-param>
-
 		<param-name>puerto</param-name>
-
 		<param-value>587</param-value>
-
 	</context-param>
 
 
-	-
 	<context-param>
-
 		<param-name>remitente</param-name>
-
-		<param-value>nikol.perdomo03@gmail.com</param-value>
-
+		<param-value>huitacasp@gmail.com</param-value>
 	</context-param>
 
-
-	-
 	<context-param>
-
 		<param-name>password</param-name>
-
-		<param-value></param-value>
-
+		<param-value>DANIELELPRO19*</param-value>
 	</context-param>
-
 </web-app>
